--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,27 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="RegName">Name :</string>
+    <string name="RegType">Type :</string>
+    <string name="RegContact">Contact No :</string>
+    <string name="RegEmail">Email :</string>
+    <string name="RegTitle">Register</string>
+    <string name="LogTitle">Login</string>
+    <string name="LogUserName">Username :</string>
+    <string name="LogPassword">Password :</string>
+    <string name="LogBtn">Login</string>
+    <string name="RegBtn">Register</string>
+
+    <string name="RegLink">Already registered</string>
+    <string name="ProfName">Name :</string>
+    <string name="ProfType">Type :</string>
+    <string name="ProfContact">Contact No :</string>
+    <string name="ProfEmail">Email :</string>
+    <string name="LogForgotPassword">Forgot Your Password?</string>
+    <string name="ForgotContact">Contact No :</string>
+    <string name="ForgotNewPassword">New Password :</string>
+    <string name="ForgotSendBtn">Send</string>
+    <string name="RegRadioPassenger">Passenger</string>
+    <string name="RegRadioDriver">Driver</string>
+    <string name="LogLink">Sign Up</string>
 </resources>
