--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,4 +166,11 @@
     <string name="profileImgBtn" />
     <string name="bookImgBtn" />
     <string name="myBookingsImgBtn" />
+
+
+
+    <string name="my_routes">My Routes</string>
+    <string name="add_route">Add Route</string>
+    <string name="payments">Payments</string>
+    <string name="booking">Booking</string>
 </resources>
