--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,6 +125,9 @@
     <string name="profileImgBtn" />
     <string name="bookImgBtn" />
     <string name="myBookingsImgBtn" />
+    <string name="pName" />
+    <string name="pContact" />
+    <string name="pEmail" />
 
 
 </resources>
